--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,7 @@ header {
     top: 0;
     left: 0;
     z-index: 100;
+    overflow-y: auto;
 
     width: 100%;
     height: 100%;
@@ -428,6 +429,11 @@ header {
     transition: transform var(--transition-dur-and-func--);
 
     transform: translate(-50%, -50%) scale(1);
+}
+@media screen and (max-height: 618px) {
+    .modal {
+        top: 332px;
+    }
 }
 .modal-close-button {
     position: absolute;
