--- a/css/styles.css
+++ b/css/styles.css
@@ -824,7 +824,7 @@ header {
         fill: var(--color-logo-white--);
     }
     .mobile-menu-list {
-        padding-bottom: 284px;
+        margin-bottom: 284px;
     }
     .mobile-menu-link {
         font-weight: 700;
