--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,162 @@ header {
     border-bottom: 1px solid var(--color-footer-text--);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+/* MOBILE MENU */
+    .mobile-menu-open {
+        position: absolute;
+        top: 24px;
+        right: 16px;
+
+        padding: 0;
+        border: none;
+
+        background-color: transparent;
+
+        line-height: 0;
+    }
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+
+        width: 100%;
+        height: 100%;
+
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity var(--transition-dur-and-func--), 
+        visibility var(--transition-dur-and-func--);
+    }
+    .mobile-menu.is-open {
+        overflow: auto;
+
+        background-color: rgba(46, 47, 66, 0.4);
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+    .mobile-menu-container {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+
+
+        position: relative;
+        padding-top: 60px;
+        padding-right: 40px;
+        padding-bottom: 40px;
+        padding-left: 40px;
+        
+        background: #FFFFFF;
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    }
+    @media screen and (max-width: 767px) and (orientation: landscape) {
+        .mobile-menu-container {
+            height: 100vw;
+        }
+    }
+    /* Mobile menu close button*/
+    .mobile-close-button {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 24px;
+        height: 24px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        background: var(--color-footer-text--);
+
+        transition: background-color var(--transition-dur-and-func--), 
+        border var(--transition-dur-and-func--);
+    }
+    .mobile-close-button:hover,
+    .mobile-close-button:focus {
+        border: transparent;
+        background-color: var(--color-button-active--);
+    }
+    .mobile-close-button-icon {
+        transition: fill var(--transition-dur-and-func--);
+    }
+    .mobile-close-button:hover .mobile-close-button-icon,
+    .mobile-close-button:focus .mobile-close-button-icon {
+        fill: var(--color-logo-white--);
+    }
+    .mobile-contacts-list {
+        margin-top: auto;
+    }
+    .mobile-menu-link {
+        color: var(--color-secondary--);
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        text-transform: capitalize;
+
+        transition: color var(--transition-dur-and-func--);
+    }
+    .mobile-menu-item:not(:last-child){
+        margin-bottom: 40px;
+    }
+    .mobile-menu-link.current {
+        color: var(--color-button-active--);
+    }
+    .mobile-menu-link:hover,
+    .mobile-menu-link:focus {
+        color: var(--color-button-active--);
+    }
+    .mobile-contacts-tel {
+        margin-bottom: 40px;
+    }
+    .mobile-contacts-tel-link {
+        color: var(--color-primary--);
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 1.11;
+        text-transform: capitalize;
+
+        transition: color var(--transition-dur-and-func--);
+    }
+    .mobile-contacts-email {
+        margin-bottom: 48px;
+    }
+    .mobile-contacts-email-link {
+        color: var(--color-primary--);
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+
+        transition: color var(--transition-dur-and-func--);
+    }
+    .mobile-contacts-tel-link:hover, 
+    .mobile-contacts-tel-link:focus, 
+    .mobile-contacts-email-link:hover, 
+    .mobile-contacts-email-link:focus {
+        color: var(--color-logo-blue--);
+    }
+    .mobile-social-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        
+        border-radius: 50%;
+        background-color: var(--color-logo-blue--);
+
+        transition: background-color var(--transition-dur-and-func--);
+    }
+    .mobile-social-link:hover,
+    .mobile-social-link:focus {
+        background-color: var(--color-button-active--);
+        outline: none;
+    }
+    .mobile-social-icon {
+        fill:var(--color-logo-white--);
+    }
 
 /* LOGO NAVIGATION, LOGO FOOTER*/
 .logo-black {
@@ -688,7 +844,7 @@ header {
 
 /* |=========================| 0 - 320px |=========================| */
 @media screen and (max-width: 319px) {
-    .container, .mobile-menu-container {
+    .mobile-menu-container {
         width: 320px;
     }
 }
@@ -749,152 +905,6 @@ header {
         padding-bottom: 24px;
     }
 
-    /* Mobile menu */
-    .mobile-menu-open {
-        position: absolute;
-        top: 24px;
-        right: 16px;
-
-        padding: 0;
-        border: none;
-
-        line-height: 0;
-
-        background-color: transparent;
-    }
-    .mobile-menu {
-        position: fixed;
-        z-index: 1000;
-        top: 0;
-        left: 0;
-
-        width: 100%;
-        height: 100%;
-
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-        transition: opacity var(--transition-dur-and-func--), 
-        visibility var(--transition-dur-and-func--);
-    }
-    .mobile-menu.is-open {
-        opacity: 1;
-        visibility: visible;
-        pointer-events: auto;
-        overflow: auto;
-    }
-    .mobile-menu-container {
-        position: relative;
-        padding-top: 60px;
-        padding-bottom: 40px;
-        padding-left: 40px;
-        padding-right: 40px;
-        
-        background: #FFFFFF;
-        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    }
-
-    /* Mobile menu */
-    .mobile-close-button {
-        position: absolute;
-        top: 40px;
-        right: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 24px;
-        height: 24px;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        border-radius: 50%;
-        background: var(--color-footer-text--);
-
-        transition: background-color var(--transition-dur-and-func--), 
-        border var(--transition-dur-and-func--);
-    }
-    .mobile-close-button:hover,
-    .mobile-close-button:focus {
-        border: transparent;
-        background-color: var(--color-button-active--);
-    }
-    .mobile-close-button-icon {
-        transition: fill var(--transition-dur-and-func--);
-    }
-    .mobile-close-button:hover .mobile-close-button-icon,
-    .mobile-close-button:focus .mobile-close-button-icon {
-        fill: var(--color-logo-white--);
-    }
-    .mobile-menu-list {
-        margin-bottom: 284px;
-    }
-    .mobile-menu-link {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11;
-        text-transform: capitalize;
-        color: var(--color-secondary--);
-
-        transition: color var(--transition-dur-and-func--);
-    }
-    .mobile-menu-item:not(:last-child){
-        margin-bottom: 40px;
-    }
-    .mobile-menu-link.current {
-        color: var(--color-button-active--);
-    }
-    .mobile-menu-link:hover,
-    .mobile-menu-link:focus {
-        color: var(--color-button-active--);
-    }
-    .mobile-contacts-tel {
-        margin-bottom: 40px;
-    }
-    .mobile-contacts-tel-link {
-        font-weight: 600;
-        font-size: 36px;
-        line-height: 1.11;
-        text-transform: capitalize;
-        color: var(--color-primary--);
-
-        transition: color var(--transition-dur-and-func--);
-    }
-    .mobile-contacts-email {
-        margin-bottom: 48px;
-    }
-    .mobile-contacts-email-link {
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        color: var(--color-primary--);
-
-        transition: color var(--transition-dur-and-func--);
-    }
-    .mobile-contacts-tel-link:hover, 
-    .mobile-contacts-tel-link:focus, 
-    .mobile-contacts-email-link:hover, 
-    .mobile-contacts-email-link:focus {
-        color: var(--color-logo-blue--);
-    }
-    .mobile-social-link {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 40px;
-        height: 40px;
-        
-        border-radius: 50%;
-        background-color: var(--color-logo-blue--);
-
-        transition: background-color var(--transition-dur-and-func--);
-    }
-    .mobile-social-link:hover,
-    .mobile-social-link:focus {
-        background-color: var(--color-button-active--);
-        outline: none;
-    }
-    .mobile-social-icon {
-        fill:var(--color-logo-white--);
-    }
-
     /* Hero */
     .hero-section {
         max-width: 428px;
@@ -942,8 +952,8 @@ header {
         text-align: center;
     }
     .footer-text {
-        text-align: start;
         width: 268px;
+        text-align: start;
     }
 
     /* Subscribe form */
@@ -975,8 +985,8 @@ header {
         padding: 8px 16px;
     }
     .portfolio-list {
-        justify-content: center;
         gap: 48px;
+        justify-content: center;
     }
     .potfolio-img {
         width: 356px;
@@ -987,8 +997,8 @@ header {
 @media screen and (min-width: 768px) {
     .container {
         width: 768px;
-        margin-left: auto;
         margin-right: auto;
+        margin-left: auto;
     }
 
     /* Header */
@@ -1004,8 +1014,8 @@ header {
     }
     .menu {
         display: flex;
-        margin-left: 120px;
         margin-right: 118px;
+        margin-left: 120px;
     }
     .menu-item {
         position: relative;
@@ -1048,11 +1058,11 @@ header {
     }
     .header-contacts {
         display: block;
+        color: var(--color-primary--);
 
         font-size: 12px;
         line-height: 1.33;
         letter-spacing: 0.04em;
-        color: var(--color-primary--);
 
         transition: color var(--transition-dur-and-func--);
     }
@@ -1101,8 +1111,8 @@ header {
 
     /* Portfolio */
     .portfolio-filter {
-        justify-content: center;
         gap: 24px;
+        justify-content: center;
     }
     .portfolio-button {
         padding: 12px 24px;
@@ -1135,8 +1145,8 @@ header {
 
     /* Customers */
     .customers-item {
-        margin-left: 12px;
         margin-right: 12px;
+        margin-left: 12px;
     }
     .customers-item:nth-child(-n + 3) {
         margin-bottom: 72px;
@@ -1145,9 +1155,9 @@ header {
     /* Footer */
     .footer-container {
         justify-content: start;
+        padding-right: 108px;
 
         padding-left: 108px;
-        padding-right: 108px;
     }
 
     /* Subscribe form */
@@ -1233,8 +1243,8 @@ header {
 @media screen and (min-width: 1200px) {
     .container {
         width: 1158px;
-        padding-left: 15px;
         padding-right: 15px;
+        padding-left: 15px;
     }
     .section {
         padding-top: 120px;
@@ -1243,8 +1253,8 @@ header {
 
     /* Header */
     .menu {
-        margin-left: 76px;
         margin-right:0;
+        margin-left: 76px;
     }
     .menu-link {
         padding-bottom: 24px;
