--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,9 @@ body {
 }
 /* ================================ */
 /* MAIN */
+.container {
+        min-width: 320px;
+    }
 /* HEADER */
 header {
     border-bottom: 1px solid var(--color-footer-text--);
@@ -586,6 +589,17 @@ header {
 
     transform: translate(-50%, -50%) scale(1);
 }
+@media screen and (min-width: 320px) and (max-width: 427px) {
+    .modal {
+        width: calc(100% - 36px);
+    }
+}
+@media screen and (min-width: 428px) and (max-width: 767px) {
+    .modal {
+        width: 392px;
+        height: 586px;
+    }
+}
 @media screen and (max-height: 618px) {
     .modal {
         top: 332px;
@@ -842,27 +856,6 @@ header {
     color:  var(--color-primary--);
 }
 
-/* |=========================| 0 - 320px |=========================| */
-@media screen and (max-width: 319px) {
-    .mobile-menu-container {
-        width: 320px;
-    }
-}
-
-/* |=========================| 320 - 427px |=========================| */
-@media screen and (min-width: 320px) and (max-width: 427px) {
-    .modal {
-        width: calc(100% - 36px);
-    }
-}
-
-/* |=========================| 428 - 767px |=========================| */
-@media screen and (min-width: 428px) and (max-width: 767px) {
-    .modal {
-        width: 392px;
-        height: 586px;
-    }
-}
 /* |=========================| 0 - 480px |=========================| */
 @media screen and (max-width: 480px) {
     /* Header */
