--- a/css/styles.css
+++ b/css/styles.css
@@ -945,9 +945,10 @@ header {
 
 /* SUBSCRIBE FORM */
 @media screen and (max-width: 767px) {
-    .subscribe-form {
+    .footer-subscribe-form {
         display: flex;
         flex-direction: column;
+        flex-wrap: wrap;
         align-items: center;
     }
 }
@@ -969,15 +970,9 @@ header {
     color: var(--color-white--);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
-@media screen and (max-width: 427px){
+@media screen and (max-width: 767px) {
     .subscribe-form-input {
-        min-width: 288px;
-        margin-bottom: 16px;
-    }
-}
-@media screen and (min-width: 428px) and (max-width: 767px) {
-    .subscribe-form-input {
-        width: 396px;
+        width: 100%;
         margin-bottom: 16px;
     }
 }
